--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,1 +1,138 @@
-pip3 install flask gunicorn
+absl-py==0.15.0
+appnope==0.1.2
+apyori==1.1.2
+argon2-cffi==21.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+backports.entry-points-selectable==1.1.0
+beautifulsoup4==4.10.0
+bleach==4.1.0
+bump2version==1.0.1
+bumpversion==0.6.0
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+clang==5.0
+click==8.0.3
+cryptography==3.4.7
+cycler==0.10.0
+dataclasses==0.8
+decorator==4.4.2
+defusedxml==0.7.1
+distlib==0.3.2
+entrypoints==0.3
+filelock==3.0.12
+Flask==2.0.2
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.41.1
+gunicorn==20.1.0
+h5py==3.1.0
+idna==2.10
+importlib-metadata==4.8.1
+importlib-resources==5.2.2
+ipykernel==5.5.5
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.0.2
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+mistune==0.8.4
+natsort==8.0.0
+nbclient==0.5.4
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+nltk==3.6.6
+notebook==6.4.4
+numpy==1.19.5
+nylas==4.12.1
+oauthlib==3.1.1
+opencv-python==4.5.4.58
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.1.5
+pandocfilters==1.5.0
+parso==0.8.2
+pexpect==4.8.0
+pickle-mixin==1.0.2
+pickleshare==0.7.5
+Pillow==8.3.2
+platformdirs==2.3.0
+praw==7.2.0
+prawcore==2.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+protobuf==3.19.1
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.10.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.1
+pytz==2021.1
+pyzmq==22.2.1
+qtconsole==5.1.1
+QtPy==1.11.1
+regex==2021.11.10
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scikit-spatial==5.2.0
+scipy==1.5.4
+seaborn==0.11.2
+Send2Trash==1.8.0
+six==1.15.0
+soupsieve==2.3.1
+stop-words==2018.7.23
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.2
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+threadpoolctl==2.2.0
+tornado==6.1
+tqdm==4.62.3
+traitlets==4.3.3
+typing-extensions==3.7.4.3
+update-checker==0.18.0
+urllib3==1.26.4
+URLObject==2.4.3
+virtualenv==20.7.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.58.0
+Werkzeug==2.0.2
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+zipp==3.5.0
